Link to the API

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <div class="wrapper">
       <header>
         <h1>Broken</h1>
-        <p>Testsuite Framework</p>
+        <p>Extensible Testsuite Framework for OCaml</p>
 
         <p class="view"><a href="https://github.com/michipili/broken">View the Project on GitHub <small>michipili/broken</small></a></p>
 
+        <p class="view"><a href="api/Broken.html">View API documentation<small>generated with ocamldoc</small></a></p>
 
         <ul>
           <li><a href="https://github.com/michipili/broken/zipball/master">Download <strong>ZIP File</strong></a></li>
